--- a/app/views/movie_templates/show.html.erb
+++ b/app/views/movie_templates/show.html.erb
@@ -87,5 +87,27 @@
 </div>
 
 <!-- Show Page Customization starts -->
+<div class="row mb-3">
+  <div class="col-md-8 offset-md-2">
+    <%= render partial: "movie_templates/movie_roles" %>
+  </div>
+</div>
 
+<div class="row mb-3">
+  <div class="col-md-8 offset-md-2">
+    <%= render partial: "movie_templates/movie_bookmarks" %>
+  </div>
+</div>
+
+<div class="row mb-3">
+  <div class="col-md-8 offset-md-2">
+    <%= render partial: "movie_templates/movie_users" %>
+  </div>
+</div>
+
+<div class="row mb-3">
+  <div class="col-md-8 offset-md-2">
+    <%= render partial: "movie_templates/movie_actors" %>
+  </div>
+</div>
 <!-- Show Page Customization end -->
