--- a/app/views/bookmark_templates/index.html.erb
+++ b/app/views/bookmark_templates/index.html.erb
@@ -58,7 +58,7 @@
 
         <!-- Display bookmark.user_id start -->
         <td>
-          <%= bookmark.user_id %>
+          <%= bookmark.user.email %>
         </td>
         <!-- Display bookmark.user_id end -->
 
