--- a/app/views/role_templates/new_form.html.erb
+++ b/app/views/role_templates/new_form.html.erb
@@ -16,7 +16,7 @@
     </label>
 
     <!-- Input for movie_id start -->
-    <input type="text" id="movie_id" name="movie_id" class="form-control">
+    <%= select_tag(:movie_id, options_from_collection_for_select(Movie.all, :id, :title, @role.movie_id), :class => "form-control") %>
     <!-- Input for movie_id end -->
   </div>
   <!-- Label and input for movie_id end -->
