Replace raw foreign key value in roles with primary descriptors

--- a/app/views/role_templates/index.html.erb
+++ b/app/views/role_templates/index.html.erb
@@ -68,7 +68,7 @@
 
         <!-- Display role.actor_id start -->
         <td>
-          <%= role.actor_id %>
+          <%= role.actor.name %>
         </td>
         <!-- Display role.actor_id end -->
 
