Replace raw foreign key value in bookmarks with primary descriptors

--- a/app/views/bookmark_templates/index.html.erb
+++ b/app/views/bookmark_templates/index.html.erb
@@ -64,7 +64,7 @@
 
         <!-- Display bookmark.movie_id start -->
         <td>
-          <%= bookmark.movie_id %>
+          <%= bookmark.movie.title %>
         </td>
         <!-- Display bookmark.movie_id end -->
 
