Replace raw foreign key value in roles with primary descriptors

--- a/app/views/role_templates/index.html.erb
+++ b/app/views/role_templates/index.html.erb
@@ -62,7 +62,7 @@
 
         <!-- Display role.movie_id start -->
         <td>
-          <%= role.movie_id %>
+          <%= role.movie.title %>
         </td>
         <!-- Display role.movie_id end -->
 
