Link to associated objects

--- a/app/views/bookmark_templates/index.html.erb
+++ b/app/views/bookmark_templates/index.html.erb
@@ -58,13 +58,21 @@
 
         <!-- Display bookmark.user_id start -->
         <td>
-          <%= bookmark.user.email %>
+          <% if bookmark.user.present? %>
+            <a href="/users/<%= bookmark.user.id %>">
+              <%= bookmark.user.email %>
+            </a>
+          <% end %>
         </td>
         <!-- Display bookmark.user_id end -->
 
         <!-- Display bookmark.movie_id start -->
         <td>
-          <%= bookmark.movie.title %>
+          <% if bookmark.movie.present? %>
+            <a href="/movies/<%= bookmark.movie.id %>">
+              <%= bookmark.movie.title %>
+            </a>
+          <% end %>
         </td>
         <!-- Display bookmark.movie_id end -->
 
